--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:background="@drawable/rounded_corners"
         android:backgroundTint="#2ca5f5"
         android:layout_weight="1"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        android:id="@+id/weightButton">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -47,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Wight Lifting"
+            android:text="Weight Lifting"
             android:id="@+id/textView2"
             android:layout_alignParentStart="true"
             android:paddingLeft="5dp"
@@ -89,7 +90,8 @@
         android:layout_height="match_parent"
         android:background="@drawable/rounded_corners"
         android:backgroundTint="#916bcd"
-        android:layout_weight="1" >
+        android:layout_weight="1"
+        android:id="@+id/yogaButton">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -163,7 +165,8 @@
         android:background="@drawable/rounded_corners"
         android:backgroundTint="#52ad56"
         android:layout_weight="1"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:id="@+id/cardioButton">
 
         <ImageView
             android:layout_width="wrap_content"
