--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -9,7 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.soaresfelipef.fitorflab.DetailsActivity"
-    android:background="#2ca5f5">
+    android:background="#2ca5f5"
+    android:id="@+id/mainBG">
 
     <TextView
         android:layout_width="wrap_content"
